[tool.poetry]
name = "luhack_bot"
version = "0.1.0"
description = "LUHack's discord bot"
authors = ["Ben Simms <ben@bensimms.moe>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
itsdangerous = "^1.1"
cryptography = "^3.3"
gino = "^1.0"
python-dotenv = "^0.15"
sqlalchemy_utils = "^0.36"
asyncpg = "^0.21"
alembic = "^1.4"
"sqlalchemy-searchable" = { tag = "1.1.2", git = "https://github.com/nitros12/sqlalchemy-searchable" }
starlette = "^0.14"
jinja2 = "^2.11"
python-multipart = "^0.0"
pygments = "^2.6"
aiofiles = "^0.6"
slug = "^2.0"
WTForms = "^2.3"
yarl = "^1.6"
gunicorn = "^20.0"
PyCrypto = "^2.6"
python-dateutil = "^2.8"
parsedatetime = "^2.6"
"discord.py" = "^1.7"
uvicorn = "^0.13"
psycopg2-binary = "^2.8.6"
tabulate = "^0.8.7"
aiosmtplib = "^1.1.4"
mistune = "2.0.0a6"
authlib = {git = "https://github.com/lepture/authlib.git"}
httpx = "^0.16.1"
orjson = "^3.4.6"
discord-ext-alternatives = "^2021.4.13"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.8"
pyre-check = "^0.9.1"

[tool.poetry.scripts]
start_bot = 'luhack_bot:run'
gen_tokens = 'luhack_bot:gen_tokens'
export_content = 'luhack_bot:export_writeups_and_blog_posts'

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
