[tool.poetry]
name = "luhack_bot"
version = "0.1.0"
description = "LUHack's discord bot"
authors = ["Ben Simms <ben@bensimms.moe>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
itsdangerous = "^2.1.2"
cryptography = "^41.0.5"
gino = "^1.0.1"
python-dotenv = "^1.0"
sqlalchemy_utils = "^0.41.1"
asyncpg = "^0.28"
alembic = "^1.12.0"
starlette = "^0.31.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0"
pygments = "^2.16.1"
aiofiles = "^23.2.1"
slug = "^2.0"
WTForms = "^3.0.1"
yarl = "^1.9.2"
gunicorn = "^21.2.0"
# PyCrypto = "^2.6"
python-dateutil = "^2.8.2"
parsedatetime = "^2.6"
"discord.py" = "^2.3.2"
uvicorn = "^0.23"
psycopg2-binary = "^2.9.8"
tabulate = "^0.9"
aiosmtplib = "^2.0.2"
mistune = "3.0.2"
orjson = "^3.9.7"
Jinja2 = "^3.1.2"
Authlib = "^1.2.1"
SQLAlchemy-Searchable = "^1.4.1"
httpx = {extras = ["http2"], version = "^0.25.0"}
pygtrie = "^2.5.0"
cachetools = "^5.3.1"
rapidfuzz = "^3.3.1"
aioretry = "^5.0.2"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.9.8"
pyre-check = "^0.9.1"

[tool.poetry.scripts]
start_bot = 'luhack_bot:run'
gen_tokens = 'luhack_bot:gen_tokens'
export_content = 'luhack_bot:export_writeups'

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
